blockml/test/errors/03_view/e281/e281.view
view: e281
derived_table: |
  SELECT ${a.dim1}
  FROM abc
fields:
- dimension: dim10
  sql: b.dim3